# expense-tracker

./: .gitignore  README.md  schema.sql
backend-expense-tracker/: .env.example  Cargo.toml
backend-expense-tracker/src/: config.rs  error.rs  main.rs  models.rs  routes.rs  tests.rs
backend-expense-tracker/src/db/: expenses.rs
backend-expense-tracker/src/handlers/: expenses.rs
expense-tracker/: package-lock.json
expense-tracker/app/: globals.css  layout.tsx  page.tsx
expense-tracker/components/: ExpenseForm.tsx  ExpenseList.tsx
expense-tracker/lib/: api.ts  categories.ts  money.ts
expense-tracker/types/: expense.ts
