[package]
name = "expense-tracker-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "expense-tracker-backend"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
sqlx            = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
tower-http      = { version = "0.5", features = ["cors"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy         = "0.15"
thiserror       = "1"
anyhow          = "1"
